--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.9.1",
+    "prisma-client-lib": "^1.34.10",
     "winston": "^3.2.1"
   },
   "devDependencies": {
