--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@server": "dist/Server"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.3.8",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
