--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.3.8",
+    "bcrypt": "^4.0.1",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
