--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.6",
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
