--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "express": "^4.17.1",
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.6",
+    "graphql-yoga": "^1.18.3",
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.9.1",
     "prisma-client-lib": "^1.34.10",
+    "subscriptions-transport-ws": "^0.9.16",
     "winston": "^3.2.1"
   },
   "devDependencies": {
