--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.3.8",
     "bcrypt": "^4.0.1",
@@ -24,8 +23,7 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "graphql-subscriptions": "^1.1.0",
-    "graphql-tools": "^4.0.6",
+    "graphql-yoga": "^1.18.3",
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.9.1",
